src/objects/Chatter_Bot_Group__c.object
<CustomObject>
    <description>Specify Chatter Groups that you want to be notified when they are updated or when someone joins the group.so that you can take actions. A common use case is to send a welcome email or Chatter post to new members of a group. This is a workaround until if or when Salesforce supports CollaborationGroup object in Process Builder.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether the Chatter Group and Chatter Group Member triggers create/update/delete Chatter Bot Group Member child records when users join or leave a group.</description>
        <inlineHelpText>Controls whether the Chatter Group and Chatter Group Member triggers create/update/delete Chatter Bot Group Member child records when users join or leave a group.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_Photo_URL__c</fullName>
        <label>Banner Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Can_Have_Guests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Have Guests?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID of the Chatter Group to monitor.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the Chatter Group to monitor.</inlineHelpText>
        <label>Chatter Group ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Collaboration_Type__c</fullName>
        <label>Collaboration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Photo_URL__c</fullName>
        <label>Full Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Group_Description__c</fullName>
        <label>Group Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Email__c</fullName>
        <description>The email address for posting Chatter messages to the group.</description>
        <inlineHelpText>The email address for posting Chatter messages to the group.</inlineHelpText>
        <label>Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Bot_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Information_Body__c</fullName>
        <label>Information Body</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Information_Title__c</fullName>
        <label>Information Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Broadcast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Broadcast?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medium_Photo_URL__c</fullName>
        <label>Medium Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Small_Photo_URL__c</fullName>
        <label>Small Photo URL</label>
        <type>Url</type>
    </fields>
    <label>Chatter Bot Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chatter_Group_ID__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Group_Owner__c</columns>
        <columns>Group_Description__c</columns>
        <columns>Member_Count__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CBG-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Bot Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>